# CLog

./: .gitignore  CMakeLists.txt  Logging.cpp  Logging.h
test/: CMakeLists.txt  LoggingTest.cpp
